--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "realtime-weather-app",
-  "homepage": "https://github.com/twozwu/realtime-weather-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/twozwu/realtime-weather-app",
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^12.6.0",
     "dayjs": "^1.10.3",
     "emotion-theming": "^11.0.0",
-    "gh-pages": "^3.1.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -43,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
